# django-sample-data-generator

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
cli/: generate.py
django_sample_generator/: __init__.py  __main__.py  constants.py  db.txt  fields.py  functions.py  generator.py  register.py  samples.py  text_db  text_generator.py
django_sample_generator/management/commands/: create_sample_data.py
sample_project/web/: generators.py  models.py  settings.py  urls.py
sample_project/web/migrations/: 0001_initial.py
tests/: generators.py  generators_functions.py  generators_manually_defined.py  generators_not_registered.py  generators_unique_fail.py  models.py  settings.py  tests.py
