[project]
name = "django-sample-data-generator"
description = "Sample data generator"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["django", "sample data"]
license = {text = "MIT"}
dynamic = ["version"]
authors = [
	{ name = "Miroslav Bendík", email = "miroslav.bendik@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"django",
]

[project.urls]
homepage = "https://github.com/mireq/django-django-sample-data-generator"
documentation = "https://github.com/mireq/django-django-sample-data-generator"
repository = "https://github.com/mireq/django-django-sample-data-generator"
changelog = "https://github.com/mireq/django-django-sample-data-generator/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"tox",
	"pylint",
	"pre-commit",
	"bump2version",
	"commitizen",
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["django_sample_generator", "django_sample_generator.management", "django_sample_generator.management.commands"]

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"
